--- a/config/languageConfig.json
+++ b/config/languageConfig.json
@@ -1,5 +1,7 @@
 {
+    "enabledReadMessage":true,
     "detectLanguages":["en","zh","ja","ko"],
     "addChineseWeight": true,
-    "defaultChinese":"zh-yue"
+    "defaultChinese":"zh-tw",
+    "readMessageSpeed": {"zh-yue":2, "zh-tw":2, "en":1.7, "ja":1.2, "ko":1.5}
 }
