replace audic read message by html overlay

--- a/config/languageConfig.json
+++ b/config/languageConfig.json
@@ -2,6 +2,6 @@
     "enabledReadMessage":true,
     "detectLanguages":["en","zh","ja","ko"],
     "addChineseWeight": true,
-    "defaultChinese":"zh-tw",
-    "readMessageSpeed": {"zh-yue":2, "zh-tw":2, "en":1.7, "ja":1.2, "ko":1.5}
+    "defaultChinese":"zh-yue",
+    "readMessageSpeed": {"zh-yue":2, "zh-tw":2, "en":1.7, "ja":1.5, "ko":1.5}
 }
