add read restream / change play autoreply to socket

--- a/config/youtubeConfig.json
+++ b/config/youtubeConfig.json
@@ -1,5 +1,5 @@
 {
-    "enableAtStart":true,
+    "enableAtStart":false,
     "channelId":"UCjMcxJpbVOB0URIS3BGhQ8w",
     "ignoreChannels":["UC8Of3RTqrxiDGk6BINBLihw"],
     "admins":["UCjMcxJpbVOB0URIS3BGhQ8w"]
