--- a/config/twitchConfig.json
+++ b/config/twitchConfig.json
@@ -1,5 +1,7 @@
 {
     "channels": ["kioma_avalon"],
     "ignoreChannels":["restreambot"],
+    "restreamBotEnabled":true,
+    "restreamBot":["restreambot"],
     "admins":["kioma_avalon","k10opalbot"]
 }
