--- a/config/botConfig.json
+++ b/config/botConfig.json
@@ -1,4 +1,6 @@
 {
     "botName":"KioBot",
-    "socketPort":3000
+    "socketPort":3000,
+    "ffmpegPath":"C:/ffmpeg/ffmpeg.exe",
+    "ffprobePath":"C:/ffmpeg/ffprobe.exe"
 }
