--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "eld": "^1.0.1",
     "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3",
-    "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.4",
     "gtts": "^0.2.1",
     "socket.io": "^4.8.1",
     "tmi.js": "^1.8.5",
-    "youtube-chat": "^2.2.0"
+    "youtube-chat": "^2.2.0",
+    "youtubei.js": "^15.0.1"
   }
 }
