use dotenv instead of config files

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@twurple/easy-bot": "^7.2.0",
     "@twurple/eventsub-ws": "^7.2.0",
     "@twurple/pubsub": "^7.2.0",
+    "dotenv": "^17.2.3",
     "eld": "^1.0.1",
     "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3",
-    "google-spreadsheet": "^4.1.4",
+    "google-auth-library": "^10.5.0",
+    "google-spreadsheet": "^5.0.2",
     "gtts": "^0.2.1",
     "socket.io": "^4.8.1",
     "tmi.js": "^1.8.5",
