add timer message and timer/5ma audio file config

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,10 @@ YOUTUBE_ENABLED=false
 YOUTUBE_CHANNEL_ID=
 YOUTUBE_IGNORE_CHANNEL_IDS=UC8Of3RTqrxiDGk6BINBLihw
 YOUTUBE_ADMIN_CHANNEL_IDS=
+
+# mahjong queue config
+QUEUE_ENABLE_5MA=false
+QUEUE_5MA_SOUND_FILE=
+
+# timer config
+TIMER_SOUND_FILE=
